# hdmlp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.py  hdmlp.py  setup.py  torch_client.py
benchmark/: torch_classification_distributed.py
benchmarks/: client.py  dataset_benchmark.py  torch_classification.py  torch_classification_distributed.py  torch_client.py
data/: hdmlp.cfg
hdmlp/: hdmlp.py
hdmlp/lib/torch/: __init__.py  hdmlpdataloader.py  hdmlpfolder.py  hdmlphdf5.py  hdmlpimagenet.py  hdmlpthreadeddataloader.py
hdmlp/lib/transforms/: __init__.py  transforms.py
include/: Configuration.h  DistributedManager.h  DistributedStore.h  FileSystemBackend.h  FileSystemPrefetcher.h  MemoryPrefetcher.h  MetadataStore.h  Prefetcher.h  PrefetcherBackend.h  PrefetcherBackendFactory.h  Sampler.h  StagingBufferPrefetcher.h  StorageBackend.h  hdmlp_api.h
include/prefetcher/: FileSystemPrefetcher.h  MemoryPrefetcher.h  Prefetcher.h  PrefetcherBackend.h  PrefetcherBackendFactory.h  StagingBufferPrefetcher.h
include/storage/: FileSystemBackend.h  StorageBackend.h
include/utils/: Configuration.h  DistributedManager.h  Sampler.h  hdmlp_api.h
lib/torch/: hdmlpdataloader.py  hdmlpfolder.py  hdmlpimagenet.py
libhdmlp/: CMakeLists.txt
libhdmlp/data/: hdmlp.cfg
libhdmlp/include/prefetcher/: MemoryPrefetcher.h  Prefetcher.h  PrefetcherBackend.h  StagingBufferPrefetcher.h
libhdmlp/include/storage/: FileSystemBackend.h  HDF5Backend.h  StorageBackend.h  StorageBackendFactory.h
libhdmlp/include/transform/: ImgDecode.h  Normalize.h  RandomHorizontalFlip.h  RandomResizedCrop.h  RandomVerticalFlip.h  Reshape.h  Resize.h  ToTensor.h  TransformPipeline.h  Transformation.h
libhdmlp/include/utils/: Configuration.h  DistributedManager.h  MetadataStore.h  Sampler.h  hdmlp_api.h
libhdmlp/src/prefetcher/: FileSystemPrefetcher.cpp  MemoryPrefetcher.cpp  Prefetcher.cpp  PrefetcherBackendFactory.cpp  StagingBufferPrefetcher.cpp
libhdmlp/src/storage/: FileSystemBackend.cpp  HDF5Backend.cpp  StorageBackendFactory.cpp
libhdmlp/src/transform/: ImgDecode.cpp  Normalize.cpp  RandomHorizontalFlip.cpp  RandomResizedCrop.cpp  RandomVerticalFlip.cpp  Reshape.cpp  Resize.cpp  ToTensor.cpp  TransformPipeline.cpp  Transformation.cpp
libhdmlp/src/utils/: Configuration.cpp  DistributedManager.cpp  MetadataStore.cpp  Sampler.cpp  hdmlp_api.cpp
src/: Configuration.cpp  DistributedManager.cpp  DistributedStore.cpp  FileSystemBackend.cpp  FileSystemPrefetcher.cpp  MemoryPrefetcher.cpp  MetadataStore.cpp  Prefetcher.cpp  PrefetcherBackendFactory.cpp  Sampler.cpp  StagingBufferPrefetcher.cpp  StorageBackend.cpp  hdmlp_api.cpp
src/prefetcher/: FileSystemPrefetcher.cpp  MemoryPrefetcher.cpp  Prefetcher.cpp  PrefetcherBackendFactory.cpp  StagingBufferPrefetcher.cpp
src/storage/: FileSystemBackend.cpp
src/utils/: Configuration.cpp  DistributedManager.cpp  MetadataStore.cpp  Sampler.cpp  hdmlp_api.cpp
